--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ nav ul li{
     /* color: aliceblue; */
     font-family: "Noto Sans", sans-serif;
     justify-content: center;
+    transition: 0.5s ease-in-out;
 }
 .box{
     display:flex;
@@ -57,6 +58,7 @@ nav ul li{
     text-align: center;
 }
 .gameInfo h1{
+    margin-top: 10px;
     color: rgba(54, 19, 19, 0.775);
 }
 .imgBox img{
@@ -75,6 +77,15 @@ nav ul li{
 }
 .bb-0{
     border-bottom: 0;
+}
+.button{
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    flex-direction: row;
+}
+.button button{
+    margin: 5px 8px;
 }
 #reset{
     border: 2px solid  rgba(0, 0, 0, 0.416);
@@ -98,3 +109,13 @@ nav ul li{
     font-size: large;
     cursor: pointer;
 }
+@media (max-width: 800px) {
+   nav ul li{
+    font-size: medium;
+   }
+   .container{
+    display: grid;
+    grid-template-columns: repeat(3,30vw);
+    grid-template-rows: repeat(3,30vw);
+   }
+ }
